--- a/index.html
+++ b/index.html
@@ -3,15 +3,296 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CI/CD Pipeline - Modern DevOps</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            min-height: 100vh;
+            padding: 20px;
+            color: #333;
+        }
+
+        .container {
+            max-width: 1000px;
+            margin: 0 auto;
+            animation: fadeIn 0.8s ease-in;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        header {
+            text-align: center;
+            margin-bottom: 50px;
+            animation: slideDown 0.6s ease-out;
+        }
+
+        @keyframes slideDown {
+            from {
+                opacity: 0;
+                transform: translateY(-30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        h1 {
+            color: white;
+            font-size: 3em;
+            margin-bottom: 20px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+        }
+
+        .subtitle {
+            color: #f0f0f0;
+            font-size: 1.3em;
+            line-height: 1.6;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .content-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+            gap: 30px;
+            margin-top: 40px;
+        }
+
+        .card {
+            background: white;
+            border-radius: 15px;
+            padding: 30px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            animation: slideUp 0.6s ease-out backwards;
+        }
+
+        .card:nth-child(1) {
+            animation-delay: 0.2s;
+        }
+
+        .card:nth-child(2) {
+            animation-delay: 0.4s;
+        }
+
+        @keyframes slideUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 15px 40px rgba(0,0,0,0.3);
+        }
+
+        .card h2 {
+            color: #667eea;
+            font-size: 1.8em;
+            margin-bottom: 20px;
+            display: flex;
+            align-items: center;
+        }
+
+        .icon {
+            width: 40px;
+            height: 40px;
+            margin-right: 15px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            border-radius: 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-weight: bold;
+            font-size: 1.2em;
+        }
+
+        .card ul {
+            list-style: none;
+        }
+
+        .card li {
+            margin-bottom: 20px;
+            padding: 15px;
+            background: #f8f9fa;
+            border-radius: 10px;
+            border-left: 4px solid #667eea;
+            transition: all 0.3s ease;
+        }
+
+        .card li:hover {
+            background: #e9ecef;
+            transform: translateX(5px);
+            border-left-width: 6px;
+        }
+
+        .card li strong {
+            color: #764ba2;
+            display: block;
+            margin-bottom: 8px;
+            font-size: 1.1em;
+        }
+
+        .benefits {
+            background: white;
+            border-radius: 15px;
+            padding: 30px;
+            margin-top: 30px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+            animation: slideUp 0.6s ease-out 0.6s backwards;
+        }
+
+        .benefits h2 {
+            color: #667eea;
+            font-size: 1.8em;
+            margin-bottom: 20px;
+            text-align: center;
+        }
+
+        .benefits-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .benefit-item {
+            text-align: center;
+            padding: 20px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            border-radius: 10px;
+            transition: transform 0.3s ease;
+        }
+
+        .benefit-item:hover {
+            transform: scale(1.05);
+        }
+
+        .benefit-item .emoji {
+            font-size: 2.5em;
+            margin-bottom: 10px;
+        }
+
+        footer {
+            text-align: center;
+            margin-top: 50px;
+            color: white;
+            font-size: 0.9em;
+        }
+
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 2em;
+            }
+
+            .subtitle {
+                font-size: 1.1em;
+            }
+
+            .content-grid {
+                grid-template-columns: 1fr;
+            }
+
+            .benefits-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1>Continuous Integration and Continuous Deployment (CI/CD)</h1>
-    <p>CI/CD is a method to frequently deliver apps to customers by introducing automation into the stages of app development.</p>
-    <h2>Key Concepts</h2>
-    <ul>
-        <li><strong>Continuous Integration (CI):</strong> The practice of merging all developer working copies to a shared mainline several times a day.</li>
-        <li><strong>Continuous Deployment (CD):</strong> The release of software changes to production automatically, without human intervention.</li>
-    </ul>
+    <div class="container">
+        <header>
+            <h1>CI/CD Pipeline</h1>
+            <p class="subtitle">Continuous Integration and Continuous Deployment (CI/CD) is a method to frequently deliver apps to customers by introducing automation into the stages of app development.</p>
+        </header>
+
+        <div class="content-grid">
+            <div class="card">
+                <h2><span class="icon">CI</span>Continuous Integration</h2>
+                <ul>
+                    <li>
+                        <strong>🔄 Automated Testing</strong>
+                        Every code commit triggers automated tests to catch bugs early in the development cycle.
+                    </li>
+                    <li>
+                        <strong>🔀 Frequent Merging</strong>
+                        Developers merge their working copies to a shared mainline several times a day, reducing integration conflicts.
+                    </li>
+                    <li>
+                        <strong>⚡ Rapid Feedback</strong>
+                        Get immediate feedback on code quality and potential issues before they reach production.
+                    </li>
+                </ul>
+            </div>
+
+            <div class="card">
+                <h2><span class="icon">CD</span>Continuous Deployment</h2>
+                <ul>
+                    <li>
+                        <strong>🚀 Automated Releases</strong>
+                        Software changes are released to production automatically, without manual intervention.
+                    </li>
+                    <li>
+                        <strong>📦 Reliable Delivery</strong>
+                        Consistent and repeatable deployment process ensures reliability and reduces human error.
+                    </li>
+                    <li>
+                        <strong>🔍 Continuous Monitoring</strong>
+                        Track deployments and quickly rollback if issues are detected in production.
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="benefits">
+            <h2>Why CI/CD Matters</h2>
+            <div class="benefits-grid">
+                <div class="benefit-item">
+                    <div class="emoji">⚡</div>
+                    <strong>Faster Delivery</strong>
+                </div>
+                <div class="benefit-item">
+                    <div class="emoji">🎯</div>
+                    <strong>Higher Quality</strong>
+                </div>
+                <div class="benefit-item">
+                    <div class="emoji">💰</div>
+                    <strong>Lower Costs</strong>
+                </div>
+                <div class="benefit-item">
+                    <div class="emoji">🛡️</div>
+                    <strong>Better Security</strong>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <p>© 2025 CI/CD Pipeline | Modern DevOps Practices</p>
+        </footer>
+    </div>
 </body>
 </html>
