--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     </li>
                     <li>
                         <strong>⚡ Rapid Feedback</strong>
-                        Get immediate feedback on code quality and potential issues before they reach production.
+                        Get immediate feedback on code quality and potential issues before they reach.
                     </li>
                 </ul>
             </div>
