--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
     
     <div class="container">
         <header>
-            <h1>🚀 CI/CD Pipeline</h1>
+            <h1>CI/CD Pipeline</h1>
             <p class="subtitle">Continuous Integration and Continuous Deployment (CI/CD) is a method to frequently deliver apps to customers by introducing automation into the stages of app development.</p>
         </header>
 
